--- a/yash-r code/npp_analysis.ipynb
+++ b/yash-r code/npp_analysis.ipynb
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "# Creating a dictionary for all geo-points with their chlorophyll data by nasa & occci\n",
+    "# Creating a dictionary for all geo-points with their npp data\n",
     "geopoint = {'A': pd.read_csv('./Nauplius data (raw)/point A (20.992197331723077, -16.918003967759443)/dataNPP_CbPM2.csv'),\n",
     "            'B': pd.read_csv('./Nauplius data (raw)/point B (20.47541893898846, -16.48246039289757)/dataNPP_CbPM2.csv'),\n",
     "            'C': pd.read_csv('./Nauplius data (raw)/point C (19.61972565135015, -16.55472288586846)/dataNPP_CbPM2.csv')\n",
